--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+
+body {
+  background-color: black;
+  font-family: 'Roboto', sans-serif;
+  color: white;
+  letter-spacing: 0.02em;
+}
+
+.app-container {
+  height: 800px;
+  width: 400px;
+  display: block;
+  margin: auto;
+  background-color: white;
+}
